--- a/index.html
+++ b/index.html
@@ -82,12 +82,13 @@
       <p class="contact1" > Contact </p>
       </div>
 
-      <p class="contact2"> /mail send Bohifin (msg)
+        <p class="contact2"> /mail send Bohifin (msg)
         <br>
         <br>
         discord: martocierny#4615
-
-      </p>
+        <br>
+        <br>
+        Discord COOP server: <a href="https://discord.gg/q9Y462C" >https://discord.gg/q9Y462C</a>
 
       <img class="photo2" src="https://media.discordapp.net/attachments/1041803696289353838/1050158826302750740/2022-12-07_22.15.13.png?width=1193&height=671">
       <p class="rights">2022 Coop. All Rights Reserved.</p>
