--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   
       <div class="about1">
       <p>
-        The COOP shop is universal shop on EMC server that work's on investment system. The stuff is not really making product. We find the best sale and buy it for out shop.
+        The COOP shop is universal shop on EMC server that work's on investment system. The stuff is not really making product. We find the best sale and buy it for our shop.
       </p>
     </div class="button1">
     <button type="button" href="/prices.html" class="button1" style="vertical-align:middle"><span> <a class="a222" href="/prices.html">PRICES </a></span></button>
